src/App.css
@font-face {
    font-family: talento;
    src: url("./assets/talentotech-font.woff2");
}
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    font-family: talento;
    transition: background-color 0.1s linear;
}

html,
body,
#root {
    height: 100%;
}
hr {
    border: 0 solid #e5e7eb !important;
    border-top-width: 1px !important;
}

.badge-outline {
    border-color: oklch(0.648 0.15 160);
    border-radius: 30.4px !important;
    border-style: solid;
    border-width: 1px;
}
.items-center {
    align-items: center;
    justify-content: center;
}
.bg-blue.menu-item {
    background-color: #082563 !important;
    transition: 100ms;
}
.bg-blue.menu-item:active {
    background-color: #dcdddf !important;
    transition: 100ms;
}
.menu-item {
    gap: 0.5rem;
}
.menu-item > span {
    font-size: 14px !important;
    line-height: 20px !important;
}
.bg-blue {
    background-color: #082563 !important;
}
.cursor-pointer {
    cursor: pointer;
}

.navpanel-animate,
.navpanel {
    transition:
        width 0.5s ease,
        transform 0.5s ease;
    overflow: hidden;
}
.navpanel.hide {
    width: 0px !important;
}
.navpanel-animate.hide {
    transform: translateX(-100%);
}

.row-cols-7 {
    display: grid !important;
    grid-template-columns: repeat(7, 1fr) !important;
}

